# raft-cpp

./: .gitignore  CMakeLists.txt  README.md  log.cpp  log.h  raft.cpp  raft.h  storage.cpp  storage.h  utils.cpp  utils.h
quorum/: majority.cpp  majority.h
raftpb/: raft.pb.cc  raft.pb.h
tracker/: inflights.cpp  inflights.h  progress.cpp  progress.h  tracker.cpp  tracker.h
